# fumiko-backend

./: .cursorignore  .gitignore  main.py  pyproject.toml
.cursor/rules/: general.mdc  migrations.mdc  scraper.mdc
scraper/: app.py  cli.py  constants.py  cron.py  database.py  registry.py  schemas.py
scraper/ai/: __init__.py  agents.py  prompts.py
scraper/crud/: character.py  site.py
scraper/sites/: base.py  chub.py  janitor.py  pygmalion.py  wyvern.py
scripts/: cli.sh  format.sh  lint.sh  push_prod.sh  start_dev.sh
supabase/: config.toml
supabase/migrations/: 20251003233233_init.sql  20251004012449_rls.sql  20251014192205_site_unique_identifier.sql  20251014223433_add_site_is_enabled.sql  20251022172235_add_characters_index.sql  20251022183027_add_character_tags.sql  20251022223850_add_tags_type.sql  20251022224709_update_character_tags_unique_constraint.sql
