[project]
name = "malaina-search-backend"
version = "0.1.0"
description = "One search for AI characters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "modal>=1.1.4",
    "pydantic>=2.11.9",
    "supabase>=2.21.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.3",
]
